<resources>
    <string name="app_name">Medscape2.0</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="splash_top_txt">Perfect \nWaste\nManagement</string>
    <string name="medscape">Medscape</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="log_in">Log in</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign up</string>
    <string name="hello">hello</string>

    <!--    errors-->
    <string name="error_empty">Field must not be empty</string>
    <string name="error_email">Must be a valid email</string>
    <string name="error_pass">Must contain Capital and Non-Capital letters, Number, Special character and Minimum length of 8</string>
    <string name="error_mobile_short">Mobile number must be 10 digits</string>
    <string name="error_mobile">Mobile number must be valid</string>
    <string name="error_name_short">Name should be 3 digits</string>
    <string name="error_name">Name should be valid with only alphabet characters</string>
    <string name="error_select_image">Select a Profile Photo to continue</string>

    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="other">Other</string>
    <string name="mobile">Mobile</string>
    <string name="permission_request_deny_message">This app needs the Location permission to show your current location on the map. \n\nNOTE: If after clicking OK, this message shows again, grant the location permission from App settings of Medscape.</string>
    <string name="location_permission_dialog_title">Location Permission Needed</string>
    <string name="center_marker">center marker</string>
    <string name="direction">direction</string>
    <string name="done_button">done_button</string>
    <string name="this_app_need_camera_permission_for_capturing_photos_from_camera">This app need camera permission for capturing photos from camera. \n\nNOTE: If after clicking OK, this message shows again, grant the location permission from App settings of Medscape.</string>
    <string name="camera_permission_needed">Camera permission needed</string>
    <string name="profile_photo">Profile photo</string>
    <string name="camera_button">camera button</string>
    <string name="camera">Camera</string>
    <string name="gallery_button">gallery button</string>
    <string name="gallery">Gallery</string>
    <string name="set_avater_button">set avater button</string>
    <string name="your_avatar">your avatar</string>
    <string name="back_button">back button</string>
    <string name="choose_your_profile_pic">Choose your profile pic</string>
    <string name="your_photo_is_used_to_identify_you_nduring_garbage_collection">Your photo is used to identify you \nduring garbage collection</string>

    <string name="error_user_already_registered">You are already registered, kindly Sign in.</string>
    <string name="error_internal_server">Server is not working properly</string>
    <string name="error_no_internet_connection">No internet connection</string>
    <string name="error_unknown">Something went wrong</string>
    <string name="error_empty_avatar">Select a profile photo to continue</string>
    <string name="error_login_invalid_credential_error">Incorrect email or password</string>
    <string name="error_could_not_get_address">Could not get address</string>
    <string name="error_address_not_found">Address not found</string>
    <string name="error_incorrect_current_password">Incorrect current password</string>

    <string name="click_on_the_dump_button_below_nto_dump_your_waste">Click on the Dump button below \nto dump your waste</string>
    <string name="contribute_in_making_our_nation_more_cleaner">Contribute in making our nation more cleaner</string>
    <string name="dump">Dump</string>
    <string name="dump_your_waste">Dump Your Waste!!</string>
    <string name="trash_board">Trash board</string>
    <string name="image">image</string>
    <string name="filter_button">filter button</string>
    <string name="change_password">Change Password</string>
    <string name="change_details">Change Details</string>
    <string name="change_avatar">Change Avatar</string>
    <string name="update_details">Update Details</string>
    <string name="account_detail_option">account detail option</string>
    <string name="account_details">Account Details</string>
    <string name="avatar">avatar</string>
    <string name="account">Account</string>
    <string name="your_account">Your Account</string>
    <string name="change_password_button">change password button</string>
    <string name="change_details_button">change details button</string>
    <string name="change_avatar_button">change avatar button</string>
    <string name="sign_out">Sign out</string>
    <string name="change_profile_photo">Change Profile Photo</string>
    <string name="select_image">Select Image</string>
    <string name="update">Update</string>
    <string name="enter_new_password">Enter new password</string>
    <string name="password_updated_successfully">Password Updated Successfully</string>
    <string name="details_updated_successfully">Details Updated Successfully</string>
    <string name="enter_current_password">Enter current password</string>
    <string name="update_avatar">Update Avatar</string>
    <string name="update_password">Update Password</string>
    <string name="sources">Sources</string>
    <string name="sources_image">sources image</string>
</resources>