<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bottom_sheet_bg"
    android:orientation="vertical"
    android:padding="16dp">

    <View
        android:layout_width="40dp"
        android:layout_height="4dp"
        android:layout_gravity="center_horizontal"
        android:background="@color/primary_green_txt_btn" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/lato_regular"
        android:text="@string/profile_photo"
        android:textColor="@color/white"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/take_photo"
            android:layout_marginStart="8dp">

            <com.google.android.material.card.MaterialCardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="@color/black"
                app:cardCornerRadius="32dp"
                app:strokeColor="@color/grey_hint"
                app:strokeWidth="1dp">

                <ImageView
                    android:id="@+id/profile_image"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_margin="12dp"
                    android:background="@color/black"
                    android:contentDescription="@string/camera_button"
                    android:scaleType="centerCrop"
                    android:src="@drawable/baseline_camera__24"
                    app:tint="@color/green_bg" />
            </com.google.android.material.card.MaterialCardView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/lato_regular"
                android:text="@string/camera"
                android:textAlignment="center"
                android:textColor="@color/grey_txt"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/choose_from_gallery"
            android:layout_marginStart="24dp">

            <com.google.android.material.card.MaterialCardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="@color/black"
                app:cardCornerRadius="32dp"
                app:strokeColor="@color/grey_hint"
                app:strokeWidth="1dp">

                <ImageView
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_margin="12dp"
                    android:background="@color/black"
                    android:contentDescription="@string/gallery_button"
                    android:scaleType="centerCrop"
                    android:src="@drawable/baseline_image_search_24"
                    app:tint="@color/green_bg" />
            </com.google.android.material.card.MaterialCardView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/lato_regular"
                android:text="@string/gallery"
                android:textAlignment="center"
                android:textColor="@color/grey_txt"
                android:textSize="12sp" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>