<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_colors"
    android:fitsSystemWindows="true"
    tools:context=".presentation.screens.user.customer.account.update_avatar.AccountChangeAvatarFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/bg_colors">

        <com.google.android.material.appbar.MaterialToolbar
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/back_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:contentDescription="@string/back_button"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_arrow_back" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_semibold"
                android:paddingStart="8dp"
                android:text="@string/change_profile_photo"
                android:textAppearance="?attr/textAppearanceBodyLarge"
                android:textColor="@color/white" />

        </com.google.android.material.appbar.MaterialToolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/grey_surface"
        app:layout_anchor="@id/app_bar"
        app:layout_anchorGravity="bottom" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/main_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="24dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:gravity="center_horizontal"
            android:paddingBottom="120dp">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/avatar_cont"
                android:layout_width="250dp"
                android:layout_height="250dp"
                id="@id/avatar_cont"
                app:cardCornerRadius="8dp"
                android:layout_marginTop="32dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:strokeWidth="0dp">

                <ImageView
                    android:id="@+id/avatar"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:src="@color/grey_txt" />
            </com.google.android.material.card.MaterialCardView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/update_btn"
                    style="@style/Widget.MaterialComponents.Button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="48dp"
                    android:layout_marginEnd="16dp"
                    android:layout_weight="1"
                    android:padding="16dp"
                    android:text="@string/update"
                    android:textColor="@color/black"
                    app:cornerRadius="8dp" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/select_avatar_btn"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="48dp"
                    android:layout_weight="1"
                    android:padding="16dp"
                    android:text="@string/select_image"
                    android:textColor="@color/grey_txt"
                    app:cornerRadius="8dp"
                    app:strokeColor="@color/grey_surface"
                    app:strokeWidth="1dp" />

            </LinearLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <ProgressBar
        android:id="@+id/progress_circular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        app:layout_anchor="@id/avatar_cont"
        app:layout_anchorGravity="center"
        android:indeterminateTint="@color/dark_green_splash_txt_bg"
        android:visibility="gone" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>